[package]
name = "loe"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]
edition = "2018"

[dependencies]
#libloe = { path = "../libloe" }
libloe = { git = "https://github.com/lausek/libloe" }
dirs = "^1.0.4"
lazy_static = "^1.2.0"
libloading = "^0.5"
rustbox = "^0.11.0"
serde = "*"
serde_derive = "^1.0"
toml = "^0.4"

[[bin]]
name = "loe"
path = "src/bin.rs"
